[package]
name = "ethernit"
version = "0.1.0"
edition = "2021"

[dependencies]
ethabi = "17.1.0"
ethereum-types = "0.14.1"
futures = "0.3.26"
hex = "0.4.3"
hex-literal = "0.3.4"
nanoid = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.37"
actix = "0.13.0"

## Error Handling
eyre = "0.6.8"
thiserror = "1.0.38"

## async
async-trait = "0.1.64"
