[package]
name = "ethernit"
version = "0.1.0"
edition = "2021"

[dependencies]
ethabi = "17.1"
ethereum-types = "0.14"
futures = "0.3"
hex = "0.4"
hex-literal = "0.3"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
actix = "0.13"

## Error Handling
eyre = "0.6"
thiserror = "1.0"

## async
async-trait = "0.1"
